--- a/.github/workflows/buid-and-deploy.yaml
+++ b/.github/workflows/buid-and-deploy.yaml
@@ -5,6 +5,18 @@ on:
     branches:
       - main
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,10 +40,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          public-key: ${{ secrets.PAGES_DEPLOY_KEY }}
-          source: ./dist
-          target: /
+          # Uploads the ./dist directory as an artifact
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+      # - name: Deploy to GitHub Pages
+      #   uses: actions/deploy-pages@v1
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     public-key: ${{ secrets.PAGES_DEPLOY_KEY }}
+      #     source: ./dist
+      #     target: /
