--- a/.github/workflows/buid-and-deploy.yaml
+++ b/.github/workflows/buid-and-deploy.yaml
@@ -20,25 +20,19 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install dependencies
         run: npm install
-
       - name: Build project
         run: npm run build
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -46,14 +40,8 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Uploads the ./dist directory as an artifact
-          path: './dist'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-      # - name: Deploy to GitHub Pages
-      #   uses: actions/deploy-pages@v1
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     public-key: ${{ secrets.PAGES_DEPLOY_KEY }}
-      #     source: ./dist
-      #     target: /
+
