--- a/.github/workflows/buid-and-deploy.yaml
+++ b/.github/workflows/buid-and-deploy.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Uploads the ./dist directory as an artifact
-          path: './dist'
+          path: 'dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
