--- a/.github/workflows/buid-and-deploy.yaml
+++ b/.github/workflows/buid-and-deploy.yaml
@@ -31,26 +31,27 @@ jobs:
       - name: Build project
         run: npm run build
       - name: upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           # Uploads the ./dist directory as an artifact
-          path: 'dist'
+          name: dist
+          path: "./dist"
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: dist
+          path: "./dist"
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           # Uploads the ./dist directory as an artifact
-          path: 'dist'
+          path: "dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-
