--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "test": "jest"
   },
   "devDependencies": {
-    "gh-pages": "latest",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@jest/types": "^29.6.3",
+    "@types/jest": "^29.5.7",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "3.0.5",
     "typescript": "latest",
     "vite": "latest"
   },
